[tool.poetry]
name = "blazeslave"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
aiohttp = "^3.7.3"
discord = "^1.0.1"
PyNaCl = "^1.4.0"
youtube_dl = "^2021.2.22"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
